--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -4,8 +4,6 @@ $mobile: 767px;
 $tablet: 1023px;
 $desktop: 1024px;
 
-////////// CSS Mixins //////////
-
 ////////// Media Query //////////
 @mixin mobile {
   @media all and (max-width: $mobile) {
@@ -23,7 +21,8 @@ $desktop: 1024px;
   }
 }
 
-////////// Flex //////////
+////////// Mixins //////////
+// flex
 @mixin flex-row {
   display: flex;
 }
@@ -40,4 +39,22 @@ $desktop: 1024px;
   @include flex-column;
   justify-content: $justify;
   align-items: $align;
+}
+
+// width, height
+@mixin width-height($width, $height) {
+  width: $width;
+  height: $height;
+}
+@mixin height-lineheight($height) {
+  height: $height;
+  line-height: $height;
+}
+
+// Position
+@mixin transformCenter {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
