--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -4,6 +4,10 @@ $mobile: 767px;
 $tablet: 1023px;
 $desktop: 1024px;
 
+$black: black;
+$sub_black: #4d4d4d;
+$white: white;
+
 ////////// Media Query //////////
 @mixin mobile {
   @media all and (max-width: $mobile) {
