--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -1,18 +1,45 @@
 @import '@/styles/mixins.scss';
 @import './common.scss';
 
+.container {
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  background: white;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.06);
+}
+
+#active {
+  color: $mainColor;
+  &::after {
+    border-bottom: 2px solid $mainColor;
+  }
+}
+
 @mixin logoCS {
   @include width-height(13rem, 2rem);
   margin: 0.4rem;
 }
 
 @mixin menuContainerCS {
-  @include flex-row-pos(space-between, center);
-  width: 36rem;
+  height: 100%;
+  line-height: 6rem;
 }
 
 @mixin menuListCS {
+  position: relative;
+  display: inline-block;
   font-size: 1.5rem;
+  margin: 0 2.4rem;
+  height: 100%;
+  &::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    border-bottom: 2px solid transparent;
+  }
 }
 
 @include tablet {
