--- a/components/Common/Header/Header.module.scss
+++ b/components/Common/Header/Header.module.scss
@@ -1,14 +1,6 @@
 @import '@/styles/mixins.scss';
 @import './common.scss';
 
-.container {
-  position: fixed;
-  top: 0;
-  z-index: 1;
-  background: white;
-  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.06);
-}
-
 #active {
   color: $mainColor;
   &::after {
@@ -22,7 +14,7 @@
 }
 
 @mixin menuContainerCS {
-  height: 100%;
+  height: 6rem;
   line-height: 6rem;
 }
 
