--- a/components/Common/Header/common.scss
+++ b/components/Common/Header/common.scss
@@ -3,4 +3,9 @@
   width: 100vw;
   height: 6rem;
   padding: 2rem 2.4rem;
+  position: fixed;
+  top: 0;
+  background: white;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.06);
+  z-index: 1;
 }
