--- a/components/UseWebPage/SideMenu/SideMenu.module.scss
+++ b/components/UseWebPage/SideMenu/SideMenu.module.scss
@@ -11,6 +11,11 @@
   .container {
     @include flex-column-pos(space-between, center);
     height: 12rem;
+    .AddressFilterContainer {
+      @include flex-row-pos(space-between, center);
+      width: 100%;
+      margin: auto 0;
+    }
   }
 }
 
