--- a/components/UseWebPage/Filter/FilterButton.module.scss
+++ b/components/UseWebPage/Filter/FilterButton.module.scss
@@ -29,7 +29,7 @@
 @include desktop {
   .container {
     @include flex-row;
-    margin: 2rem 0 3.2rem 0;
+    margin: 2rem 4rem 3.2rem 4rem;
     .button {
       @include flex-row-pos(space-between, center);
       border: 1px solid #dbdee8;
