--- a/components/UseWebPage/SearchStore.tsx/StoreSearch.module.scss
+++ b/components/UseWebPage/SearchStore.tsx/StoreSearch.module.scss
@@ -46,7 +46,7 @@
 @include desktop {
   .container {
     @include width-height(39rem, 5.2rem);
-    margin: 4.4rem 0;
+    margin: 4.4rem 4rem;
     .searchImg {
       @include width-height(1.8rem, 1.8rem);
     }
