--- a/components/UseWebPage/CurrentAddress/CurrentAddress.module.scss
+++ b/components/UseWebPage/CurrentAddress/CurrentAddress.module.scss
@@ -1,10 +1,13 @@
 @import '@/styles/mixins.scss';
 
 @include mobile {
+  #showList {
+    text-align: left;
+  }
   .currentAddress {
     font-size: 1.5rem;
     text-align: center;
-    margin-bottom: 1.2rem;
+    margin-bottom: 0.8rem;
   }
 }
 
