--- a/components/UseWebPage/Section/StoreDetailSection/StoreDetailSection.module.scss
+++ b/components/UseWebPage/Section/StoreDetailSection/StoreDetailSection.module.scss
@@ -6,6 +6,18 @@
   background: white;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.16);
   overflow-y: scroll;
+  &::-webkit-scrollbar {
+    width: 0.8rem;
+    height: 100%;
+  }
+  &::-webkit-scrollbar-thumb {
+    background: #b8bdcc;
+  }
+  &::-webkit-scrollbar-track {
+    background: rgba(219, 222, 232, 0.4);
+    padding-top: 5px;
+    position: absolute;
+  }
 }
 
 @mixin findWayWrapperCS {
@@ -22,7 +34,7 @@
 
 @mixin hrCS {
   background: rgba(219, 222, 232, 0.6);
-  border: 0;
+  border: none;
 }
 
 @mixin paymentTitleCS {
@@ -257,10 +269,15 @@
   .detailContainer {
     @include detailContainerCS;
     @include width-height(47rem, 98rem);
+    display: flex;
+    flex-direction: column;
     left: 49rem;
     top: 2rem;
     padding: 2rem;
     border-radius: 2rem;
+    &::-webkit-scrollbar-thumb {
+      border-radius: 0 10rem 10rem 0;
+    }
     .topContainer {
       @include flex-row-pos(space-between, center);
       .nameWrapper {
@@ -281,7 +298,7 @@
     }
     .findWayWrapper {
       @include findWayWrapperCS;
-      @include width-height(43rem, 5.2rem);
+      padding: 1.4rem 0;
       margin: 3.2rem 0 2.6rem 0;
       .findWayImage {
         @include width-height(2.4rem, 2.4rem);
@@ -321,11 +338,10 @@
         }
       }
     }
-    hr {
+    .lightHr {
       @include hrCS;
-      width: 100%;
-      height: 0.1rem;
       margin: 2rem 0;
+      border-top: 0.1px solid rgba(219, 222, 232, 0.6);
     }
     .requestModifyWrapper {
       @include flex-row-pos(flex-start, center);
@@ -340,9 +356,10 @@
       }
     }
     .midHr {
+      @include hrCS;
       position: absolute;
       left: 0;
-      top: 27rem;
+      top: 29.5rem;
       width: 100%;
       height: 0.8rem;
     }
