--- a/pages/useweb.module.scss
+++ b/pages/useweb.module.scss
@@ -26,3 +26,16 @@
     @include containerCS;
   }
 }
+
+.mapContainer {
+  position: relative;
+  @include width-height(100%, 100%);
+}
+
+.pin {
+  @include width-height(7.6rem, 6rem);
+  position: absolute;
+  top: calc(50% - 6rem);
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
