fix: 반응형 CSS 오류 수정 및 이름 통일

--- a/components/UseWebPage/Section/StoreDetailSection/StoreDetailSection.module.scss
+++ b/components/UseWebPage/Section/StoreDetailSection/StoreDetailSection.module.scss
@@ -268,7 +268,7 @@
 @include desktop {
   .detailContainer {
     @include detailContainerCS;
-    @include width-height(47rem, 98rem);
+    @include width-height(47rem, 96%);
     display: flex;
     flex-direction: column;
     left: 49rem;
