design: 글꼴 및 어긋난 CSS 변경

--- a/components/UseWebPage/Section/FilterSection/FilterSection.module.scss
+++ b/components/UseWebPage/Section/FilterSection/FilterSection.module.scss
@@ -29,6 +29,7 @@
 @mixin backImgCs {
   @include width-height(2.4rem, 2.4rem);
   margin-left: 2rem;
+  cursor: pointer;
 }
 
 @mixin headerTextCS {
