--- a/components/Common/Footer/Footer.module.scss
+++ b/components/Common/Footer/Footer.module.scss
@@ -10,6 +10,7 @@
 }
 
 @mixin listItemCS {
+  display: inline-block;
   font-weight: 400;
   line-height: 2rem;
   color: #9fa1a9;
@@ -95,8 +96,6 @@
       @include hrCS;
     }
     .tapplaceInfoContainer {
-      @include flex-row-pos(space-between, flex-start);
-      width: 61rem;
       margin-bottom: 2.8rem;
       .listItem {
         @include listItemCS;
@@ -137,8 +136,6 @@
       @include hrCS;
     }
     .tapplaceInfoContainer {
-      @include flex-row-pos(space-between, flex-start);
-      width: 61rem;
       margin-bottom: 2.8rem;
       .listItem {
         @include listItemCS;
