--- a/components/UseWebPage/Section/StoreDetailSection/StoreDetailSection.module.scss
+++ b/components/UseWebPage/Section/StoreDetailSection/StoreDetailSection.module.scss
@@ -77,6 +77,7 @@
       }
       .closeImage {
         @include width-height(2.4rem, 2.4rem);
+        cursor: pointer;
       }
     }
     .findWayWrapper {
@@ -142,7 +143,7 @@
     .midHr {
       position: absolute;
       left: 0;
-      top: 26rem;
+      top: 27rem;
       width: 100%;
       height: 0.8rem;
     }
@@ -182,6 +183,7 @@
       }
       .closeImage {
         @include width-height(2.4rem, 2.4rem);
+        cursor: pointer;
       }
     }
     .findWayWrapper {
@@ -247,7 +249,7 @@
     .midHr {
       position: absolute;
       left: 0;
-      top: 27rem;
+      top: 28rem;
       width: 100%;
       height: 0.8rem;
     }
@@ -294,6 +296,7 @@
       }
       .closeImage {
         @include width-height(2.4rem, 2.4rem);
+        cursor: pointer;
       }
     }
     .findWayWrapper {
@@ -359,7 +362,7 @@
       @include hrCS;
       position: absolute;
       left: 0;
-      top: 29.5rem;
+      top: 30rem;
       width: 100%;
       height: 0.8rem;
     }
