feat: 드래그 막는 기능 추가

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -37,6 +37,13 @@ html {
   }
 }
 
+body {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 input,
 textarea,
 button {
