refactor: 헤더 리팩토링 및 웹 접근성 향상(a11y-hidden)

--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -5,7 +5,10 @@ $tablet: 1023px;
 $desktop: 1024px;
 
 $black: black;
-$sub_black: #4d4d4d;
+$sub-black: #4d4d4d;
+$color-4d4d4d: #4d4d4d;
+$color-707070: #707070;
+$color-3f4353: #3f4353;
 $white: white;
 
 ////////// Media Query //////////
