--- a/components/_Atoms/FontAwesome/Navigation/index.module.scss
+++ b/components/_Atoms/FontAwesome/Navigation/index.module.scss
@@ -1,5 +1,6 @@
 @import '@/styles/mixins.scss';
 
 .button {
-  @include width-height(1.6rem, 1.6rem);
+  @include width-height(1.8rem, 1.8rem);
+  color: #b8bdcc;
 }
