--- a/components/_Molecules/Slider/PaymentSlider.module.scss
+++ b/components/_Molecules/Slider/PaymentSlider.module.scss
@@ -40,6 +40,7 @@
     @include containerCS;
     height: 9rem;
     margin-top: 4rem;
+    margin-bottom: 8rem;
     .image {
       animation: slider_desktop 12s linear infinite;
       @include width-height(23rem, 9rem);
