style/refactor: 메인페이지 리팩토링 완료 및 컴포넌트 스타일 추가

--- a/components/_Molecules/Container/AppStoreButton/AppStoreButton.module.scss
+++ b/components/_Molecules/Container/AppStoreButton/AppStoreButton.module.scss
@@ -3,6 +3,9 @@
 @include mobile {
   .container {
     @include flex-column-pos(center, center);
+    &.DownloadSection {
+      margin-top: 0.8rem;
+    }
   }
 }
 
@@ -10,6 +13,9 @@
   .container {
     display: flex;
     gap: 0.8rem;
+    &.DownloadSection {
+      margin-top: 4rem;
+    }
   }
 }
 
@@ -17,5 +23,8 @@
   .container {
     display: flex;
     gap: 1.6rem;
+    &.DownloadSection {
+      margin-top: 5.2rem;
+    }
   }
 }
