design/refactor: CSS 수정 및 이미지 로딩 설정

--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -6,10 +6,14 @@ $desktop: 1024px;
 
 $black: black;
 $sub-black: #4d4d4d;
-$color-4d4d4d: #4d4d4d;
-$color-707070: #707070;
-$color-3f4353: #3f4353;
 $white: white;
+$color-23252d: #23252d;
+$color-3f4353: #3f4353;
+$color-4d4d4d: #4d4d4d;
+$color-6e717d: #6e717d;
+$color-707070: #707070;
+$color-9fa1a9: #9fa1a9;
+$color-a1a6b0: #a1a6b0;
 
 ////////// Media Query //////////
 @mixin mobile {
