--- a/components/_Atoms/Image/MockUp/MerchantRegistration/MerchantRegistration.module.scss
+++ b/components/_Atoms/Image/MockUp/MerchantRegistration/MerchantRegistration.module.scss
@@ -1,9 +1,13 @@
 @import '@/styles/mixins.scss';
 
 .wrapper {
+  position: relative;
   background-color: $mainColor;
-  img {
-    width: 100%;
+  .img {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 0;
   }
 }
 
@@ -11,10 +15,10 @@
   .wrapper {
     width: 32.5rem;
     height: 36rem;
-    padding: 3.3rem 3.4rem 0 3.4rem;
-    border-radius: 4rem;
-    img {
-      height: 100%;
+    border-radius: 3rem;
+    .img {
+      width: 26rem;
+      height: 32.5rem;
     }
   }
 }
@@ -23,10 +27,10 @@
   .wrapper {
     width: 62.5rem;
     height: 53.5rem;
-    padding: 6.4rem 12rem 0 12rem;
     border-radius: 6rem;
-    img {
-      height: 100%;
+    .img {
+      width: 38.5rem;
+      height: 51rem;
     }
   }
 }
@@ -35,12 +39,12 @@
   .wrapper {
     width: 60rem;
     height: 53.5rem;
-    padding: 6.8rem 10.8rem 0 10.8rem;
     border-radius: 6rem;
     display: grid;
     grid-row: 1 / 3;
-    img {
-      height: calc(100% - 0.4rem);
+    .img {
+      width: 38.5rem;
+      height: 47rem;
     }
   }
 }
