--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -7,13 +7,16 @@ $desktop: 1024px;
 $black: black;
 $sub-black: #4d4d4d;
 $white: white;
+$color-212121: #212121;
 $color-23252d: #23252d;
 $color-3f4353: #3f4353;
 $color-4d4d4d: #4d4d4d;
 $color-6e717d: #6e717d;
 $color-707070: #707070;
 $color-9fa1a9: #9fa1a9;
+$color-9e9e9e: #9e9e9e;
 $color-a1a6b0: #a1a6b0;
+$color-dbdee8: #dbdee8;
 
 ////////// Media Query //////////
 @mixin mobile {
