refactor: useweb페이지 기본 레이아웃 구조 및 주변 가맹점 가져오는 api 리팩토링

--- a/components/_Atoms/Input/SearchMerchant/SearchMerchantInput.module.scss
+++ b/components/_Atoms/Input/SearchMerchant/SearchMerchantInput.module.scss
@@ -25,6 +25,7 @@
       flex: 1;
       border: none;
       outline: none;
+      height: 100%;
       &::placeholder {
         color: #707070;
         font-size: 1.7rem;
