--- a/components/_Atoms/List/Merchant/Merchant.module.scss
+++ b/components/_Atoms/List/Merchant/Merchant.module.scss
@@ -2,6 +2,7 @@
 
 .container {
   @include flex-column;
+  cursor: pointer;
   &:nth-child(1) {
     border-top: 0.1rem solid lightgray;
   }
@@ -12,7 +13,7 @@
       color: $color-212121;
       font-weight: 400;
     }
-    .merchantType {
+    .merchantCategory {
       color: $color-9e9e9e;
       font-weight: 400;
     }
@@ -46,7 +47,7 @@
         font-size: 1.8rem;
         line-height: 2.5rem;
       }
-      .merchantType {
+      .merchantCategory {
         font-size: 1.5rem;
         line-height: 2rem;
         margin-left: 0.6rem;
