refactor: 가맹점 정보 모달창 리팩토링

--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -9,6 +9,7 @@ $sub-black: #4d4d4d;
 $white: white;
 $color-212121: #212121;
 $color-23252d: #23252d;
+$color-333333: #333333;
 $color-3f4353: #3f4353;
 $color-4d4d4d: #4d4d4d;
 $color-6e717d: #6e717d;
