--- a/components/_Atoms/Button/ShowFilterMenu/ShowFilterMenu.module.scss
+++ b/components/_Atoms/Button/ShowFilterMenu/ShowFilterMenu.module.scss
@@ -4,11 +4,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 0.1px solid $color-dbdee8;
+  border: 0.1rem solid $color-dbdee8;
   border-radius: 100rem;
   font-weight: 400;
   color: $color-212121;
   background: white;
+}
+.active {
+  border: 0.1rem solid $mainColor;
+  color: $mainColor;
 }
 
 @include mobile {
