--- a/components/_Organisms/Modal/FilteringMenu/FilteringMenu.module.scss
+++ b/components/_Organisms/Modal/FilteringMenu/FilteringMenu.module.scss
@@ -14,7 +14,7 @@
     top: 6rem;
     left: 0;
     width: 47rem;
-    height: 102rem;
+    height: calc(100% - 6rem);
     background-color: white;
     .title {
       height: 6rem;
@@ -24,6 +24,14 @@
       font-size: 2rem;
       font-weight: 400;
       color: $color-212121;
+    }
+    .closeButton {
+      position: absolute;
+      top: 1.8rem;
+      left: 1.8rem;
+      width: 2.4rem;
+      height: 2.4rem;
+      cursor: pointer;
     }
     .filterCategory {
       padding: 2rem 0;
