--- a/components/_Atoms/Input/SearchMerchant/SearchMerchantInput.module.scss
+++ b/components/_Atoms/Input/SearchMerchant/SearchMerchantInput.module.scss
@@ -8,6 +8,7 @@
 
 @include desktop {
   .container {
+    position: relative;
     border: 0.2rem solid $mainColor;
     border-radius: 1rem;
     box-shadow: 0px 0px 12px rgba(78, 119, 251, 0.4);
@@ -26,11 +27,22 @@
       border: none;
       outline: none;
       height: 100%;
+      font-size: 1.7rem;
+      font-weight: 400;
       &::placeholder {
         color: #707070;
-        font-size: 1.7rem;
-        font-weight: 400;
       }
+    }
+    button {
+      position: absolute;
+      right: 1.4rem;
+      width: 2.4rem;
+      height: 2.4rem;
+      background-color: white;
+    }
+    .closeButton {
+      width: 100%;
+      height: 100%;
     }
   }
 }
