--- a/components/_Atoms/Text/SubSection/SubSectionSecondLine.module.scss
+++ b/components/_Atoms/Text/SubSection/SubSectionSecondLine.module.scss
@@ -9,6 +9,7 @@
   .text {
     font-size: 1.6rem;
     line-height: 2.1rem;
+    margin-bottom: 4rem;
   }
 }
 
@@ -16,6 +17,7 @@
   .text {
     font-size: 1.8rem;
     line-height: 2.4rem;
+    margin-bottom: 4rem;
   }
 }
 
@@ -23,5 +25,6 @@
   .text {
     font-size: 2rem;
     line-height: 2.6rem;
+    margin-bottom: 5.2rem;
   }
 }
