--- a/components/_Organisms/Section/IntroService.module.scss
+++ b/components/_Organisms/Section/IntroService.module.scss
@@ -4,6 +4,15 @@
   .container {
     @include flex-column-pos(center, center);
     padding: 4rem 2.7rem 0 2.7rem;
+    .subContainer {
+      @include flex-column-pos(center, center);
+      a {
+        font-size: 1.5rem;
+        font-weight: 400;
+        color: $mainColor;
+        margin-top: 1.2rem;
+      }
+    }
   }
 }
 
