--- a/components/_Atoms/Naver/Map/Map.module.scss
+++ b/components/_Atoms/Naver/Map/Map.module.scss
@@ -1,8 +1,32 @@
-.mapContainer {
-  flex: 1;
-  height: calc(100vh - 6rem);
-}
+@import '@/styles/mixins.scss';
 
 .map {
   height: 100%;
+}
+
+.mapContainer {
+  flex: 1;
+  height: calc(100vh - 6rem);
+  position: relative;
+  > img {
+    position: absolute;
+    top: calc(50% - 5.9rem);
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 7.6rem;
+    height: 5.9rem;
+  }
+  > button {
+    position: absolute;
+    left: 50%;
+    bottom: 4rem;
+    transform: translateX(-50%);
+    padding: 1rem 1.7rem;
+    background-color: white;
+    box-shadow: 0px 0.2rem 0.4rem rgba(0, 0, 0, 0.2);
+    border-radius: 10rem;
+    color: $mainColor;
+    font-size: 1.6rem;
+    font-weight: 400;
+  }
 }
