--- a/components/_Atoms/Button/FeedbackInApp/FeedbackInApp.module.scss
+++ b/components/_Atoms/Button/FeedbackInApp/FeedbackInApp.module.scss
@@ -2,16 +2,27 @@
 
 .button {
   background-color: $mainColor;
-  border-radius: 0 0 1rem 1rem;
   color: white;
   font-size: 1.7rem;
   font-weight: 400;
 }
 
 @include mobile {
+  .button {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 5.6rem;
+  }
 }
 
 @include tablet {
+  .button {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 5.6rem;
+  }
 }
 
 @include desktop {
@@ -20,5 +31,6 @@
     bottom: 2rem;
     width: 47rem;
     height: 5.6rem;
+    border-radius: 0 0 1rem 1rem;
   }
 }
