--- a/components/_Atoms/Button/FeedbackModalClose/FeedbackModalClose.module.scss
+++ b/components/_Atoms/Button/FeedbackModalClose/FeedbackModalClose.module.scss
@@ -1,22 +1,34 @@
 @import '@/styles/mixins.scss';
 
+.button {
+  width: 2.4rem;
+  height: 2.4rem;
+  position: absolute;
+  top: 2rem;
+  background: none;
+  img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
 @include mobile {
+  .button {
+    right: 2.4rem;
+    top: 2rem;
+  }
 }
 
 @include tablet {
+  .button {
+    right: 2.4rem;
+    top: 2rem;
+  }
 }
 
 @include desktop {
   .button {
-    width: 2.4rem;
-    height: 2.4rem;
-    position: absolute;
     right: 2rem;
     top: 2.4rem;
-    background: none;
-    img {
-      width: 100%;
-      height: 100%;
-    }
   }
 }
