--- a/components/_Atoms/Button/ShowFilterMenu/ShowFilterMenu.module.scss
+++ b/components/_Atoms/Button/ShowFilterMenu/ShowFilterMenu.module.scss
@@ -16,9 +16,27 @@
 }
 
 @include mobile {
+  .button {
+    width: 8rem;
+    height: 3rem;
+    font-size: 1.2rem;
+    img {
+      width: 1.5rem;
+      height: 1.5rem;
+    }
+  }
 }
 
 @include tablet {
+  .button {
+    width: 10.6rem;
+    height: 3.6rem;
+    font-size: 1.5rem;
+    img {
+      width: 1.8rem;
+      height: 1.8rem;
+    }
+  }
 }
 
 @include desktop {
@@ -26,7 +44,6 @@
     width: 10.6rem;
     height: 3.6rem;
     font-size: 1.5rem;
-    line-height: 2rem;
     img {
       width: 1.8rem;
       height: 1.8rem;
