--- a/components/_Atoms/Input/SearchMerchant/SearchMerchantInput.module.scss
+++ b/components/_Atoms/Input/SearchMerchant/SearchMerchantInput.module.scss
@@ -1,48 +1,73 @@
 @import '@/styles/mixins.scss';
 
+@mixin container-layout {
+  border: 0.2rem solid $mainColor;
+  box-shadow: 0px 0px 12px rgba(78, 119, 251, 0.4);
+  border-radius: 1rem;
+  display: flex;
+  align-items: center;
+  height: 5.2rem;
+  > img {
+    width: 2.4rem;
+    height: 2.4rem;
+    margin-right: 1rem;
+  }
+  > input {
+    flex: 1;
+    border: none;
+    outline: none;
+    font-size: 1.7rem;
+    font-weight: 400;
+    &::placeholder {
+      color: #707070;
+    }
+  }
+  > button {
+    position: absolute;
+    width: 2.4rem;
+    height: 2.4rem;
+    background-color: white;
+  }
+  .closeButton {
+    width: 100%;
+    height: 100%;
+  }
+}
+
 @include mobile {
+  .container {
+    @include container-layout;
+    margin: 0.4rem 2.4rem;
+    padding: 1.5rem 2rem;
+    button {
+      right: 3.8rem;
+    }
+  }
 }
 
 @include tablet {
+  .container {
+    @include container-layout;
+    margin: 0.4rem 2.4rem;
+    padding: 1.5rem 2rem;
+    button {
+      right: 3.8rem;
+    }
+  }
 }
 
 @include desktop {
   .container {
+    @include container-layout;
     position: relative;
-    border: 0.2rem solid $mainColor;
-    border-radius: 1rem;
-    box-shadow: 0px 0px 12px rgba(78, 119, 251, 0.4);
-    display: flex;
-    align-items: center;
     width: 39rem;
-    height: 5.2rem;
     padding: 0 2rem;
     margin: 4.4rem auto;
-    img {
-      cursor: pointer;
-      margin-right: 1rem;
-    }
     input {
-      flex: 1;
-      border: none;
-      outline: none;
       height: 100%;
-      font-size: 1.7rem;
-      font-weight: 400;
-      &::placeholder {
-        color: #707070;
-      }
     }
     button {
-      position: absolute;
       right: 1.4rem;
-      width: 2.4rem;
-      height: 2.4rem;
-      background-color: white;
-    }
-    .closeButton {
-      width: 100%;
-      height: 100%;
     }
   }
 }
