--- a/components/_Atoms/Naver/Map/Map.module.scss
+++ b/components/_Atoms/Naver/Map/Map.module.scss
@@ -1,13 +1,11 @@
 @import '@/styles/mixins.scss';
 
-.map {
-  height: 100%;
-}
-
-.mapContainer {
-  flex: 1;
-  height: calc(100vh - 6rem);
+@mixin mapContainer_CS {
   position: relative;
+  flex: 1;
+  .map {
+    height: 100%;
+  }
   > img {
     position: absolute;
     top: calc(50% - 5.9rem);
@@ -19,14 +17,47 @@
   > button {
     position: absolute;
     left: 50%;
-    bottom: 4rem;
     transform: translateX(-50%);
     padding: 1rem 1.7rem;
     background-color: white;
     box-shadow: 0px 0.2rem 0.4rem rgba(0, 0, 0, 0.2);
     border-radius: 10rem;
     color: $mainColor;
-    font-size: 1.6rem;
     font-weight: 400;
+  }
+}
+
+@include mobile {
+  .mapContainer {
+    @include mapContainer_CS;
+    height: calc(100vh - 16rem);
+    margin-top: 10rem;
+    > button {
+      bottom: 8rem;
+      font-size: 1.4rem;
+    }
+  }
+}
+
+@include tablet {
+  .mapContainer {
+    @include mapContainer_CS;
+    height: calc(100vh - 18.4rem);
+    margin-top: 12rem;
+    > button {
+      bottom: 8rem;
+      font-size: 1.6rem;
+    }
+  }
+}
+
+@include desktop {
+  .mapContainer {
+    @include mapContainer_CS;
+    height: calc(100vh - 6rem);
+    > button {
+      bottom: 4rem;
+      font-size: 1.6rem;
+    }
   }
 }
