--- a/components/_Molecules/Container/MerchantList/MerchantList.module.scss
+++ b/components/_Molecules/Container/MerchantList/MerchantList.module.scss
@@ -15,9 +15,15 @@
 }
 
 @include mobile {
+  .container {
+    height: calc(100vh - 16rem);
+  }
 }
 
 @include tablet {
+  .container {
+    height: calc(100vh - 18.4rem);
+  }
 }
 
 @include desktop {
