--- a/components/_Organisms/Modal/MarkerDetail/MerchantDetail.module.scss
+++ b/components/_Organisms/Modal/MarkerDetail/MerchantDetail.module.scss
@@ -2,6 +2,7 @@
 
 .container {
   border: none;
+  z-index: 2;
   &::-webkit-scrollbar {
     appearance: none;
     width: 0.8rem;
@@ -15,9 +16,160 @@
 }
 
 @include mobile {
+  .container {
+    @include flex-column;
+    position: absolute;
+    border-radius: 1rem;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: calc(100% - 40rem);
+    padding-top: 2rem;
+    background-color: white;
+    box-shadow: 0px 0.4 1rem rgba(0, 0, 0, 0.16);
+    overflow-y: scroll;
+    .placeCategoryNameWrapper {
+      display: flex;
+      align-items: flex-end;
+      gap: 0.8rem;
+      padding: 0 2rem;
+      h3 {
+        font-size: 2.2rem;
+        font-weight: 400;
+      }
+      h4 {
+        font-size: 1.6rem;
+        font-weight: 400;
+        color: $color-9e9e9e;
+      }
+    }
+    .addressAndPhonWrapper {
+      display: flex;
+      flex-direction: column;
+      gap: 1.6rem;
+      border-bottom: 0.1rem solid rgba(219, 222, 232, 0.6);
+      font-size: 1.6rem;
+      font-weight: 400;
+      color: $color-707070;
+      margin: 0 2rem;
+      address,
+      span {
+        display: flex;
+        align-items: center;
+      }
+      address {
+        font-style: normal;
+        margin-top: 1.75rem;
+        gap: 1.2rem;
+        img {
+          width: 1.4rem;
+          height: 2rem;
+        }
+      }
+      span {
+        margin-bottom: 1.75rem;
+        gap: 0.8rem;
+        img {
+          width: 1.8rem;
+          height: 1.8rem;
+        }
+      }
+    }
+    .modifyInfoWrapper {
+      display: flex;
+      align-items: center;
+      padding: 1.8rem 2rem;
+      gap: 1rem;
+      font-size: 1.6rem;
+      font-weight: 400;
+      color: $color-707070;
+      img {
+        width: 1.8rem;
+        height: 1.8rem;
+      }
+    }
+    .divideLine {
+      border: 0.4rem solid rgba(219, 222, 232, 0.4);
+    }
+  }
 }
 
 @include tablet {
+  .container {
+    @include flex-column;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    border-radius: 1rem;
+    height: calc(100% - 44rem);
+    padding-top: 2rem;
+    background-color: white;
+    overflow-y: scroll;
+    .placeCategoryNameWrapper {
+      display: flex;
+      align-items: flex-end;
+      gap: 0.8rem;
+      padding: 0 2.4rem;
+      h3 {
+        font-size: 2.2rem;
+        font-weight: 400;
+      }
+      h4 {
+        font-size: 1.6rem;
+        font-weight: 400;
+        color: $color-9e9e9e;
+      }
+    }
+    .addressAndPhonWrapper {
+      display: flex;
+      flex-direction: column;
+      gap: 1.6rem;
+      border-bottom: 0.1rem solid rgba(219, 222, 232, 0.6);
+      font-size: 1.6rem;
+      font-weight: 400;
+      color: $color-707070;
+      margin: 0 2rem;
+      address,
+      span {
+        display: flex;
+        align-items: center;
+      }
+      address {
+        font-style: normal;
+        margin-top: 1.75rem;
+        gap: 1.2rem;
+        img {
+          width: 1.4rem;
+          height: 2rem;
+        }
+      }
+      span {
+        margin-bottom: 1.75rem;
+        gap: 0.8rem;
+        img {
+          width: 1.8rem;
+          height: 1.8rem;
+        }
+      }
+    }
+    .modifyInfoWrapper {
+      display: flex;
+      align-items: center;
+      padding: 1.8rem 2.4rem;
+      gap: 1rem;
+      font-size: 1.6rem;
+      font-weight: 400;
+      color: $color-707070;
+      img {
+        width: 1.8rem;
+        height: 1.8rem;
+      }
+    }
+    .divideLine {
+      border: 0.4rem solid rgba(219, 222, 232, 0.4);
+    }
+  }
 }
 
 @include desktop {
@@ -99,27 +251,5 @@
     .divideLine {
       border: 0.4rem solid rgba(219, 222, 232, 0.4);
     }
-  }
-  .infoWindow {
-    display: flex;
-    justify-content: center;
-    z-index: 10000;
-    border: none;
-    box-shadow: 0 0.2rem 0.6rem rgba(0, 0, 0, 0.2);
-    border-radius: 1rem;
-    display: block;
-    position: absolute;
-    left: 132rem;
-    top: 46rem;
-    text-align: center;
-    font-size: 1.6rem;
-    font-weight: 400;
-    width: 20rem;
-    height: 4.5rem;
-    padding: 0 1rem;
-    line-height: 4.5rem;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
   }
 }
